[gd_scene load_steps=5 format=3 uid="uid://damvnahb0l06r"]

[ext_resource type="Script" uid="uid://byn3ujmdyfdss" path="res://inventory/hotbar_ui.gd" id="2_e5uu7"]
[ext_resource type="PackedScene" uid="uid://bkdejwtano2po" path="res://inventory/hotbar_ui_item.tscn" id="3_sd7l5"]
[ext_resource type="Texture2D" uid="uid://cuqhxib5ei6p3" path="res://assets/ui/Inv_Box.png" id="5_e3dwb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sd7l5"]
texture = ExtResource("5_e3dwb")

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.30600002
anchor_top = 0.76400006
anchor_right = 0.694
anchor_bottom = 0.95000005
offset_left = 0.3199768
offset_top = -0.08001709
offset_right = -0.32000732
offset_bottom = -6.1035156e-05
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_sd7l5")
script = ExtResource("2_e5uu7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="InventorySlot1" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_sd7l5")]
layout_mode = 2
active_slot = true

[node name="InventorySlot2" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_sd7l5")]
layout_mode = 2
inventory_position = 2

[node name="InventorySlot3" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_sd7l5")]
layout_mode = 2
inventory_position = 3

[node name="InventorySlot4" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_sd7l5")]
layout_mode = 2
inventory_position = 4
